--- a/agatha.html
+++ b/agatha.html
@@ -75,6 +75,8 @@
       justify-content: space-between;
     }
 
+
+
     @media only screen and (max-width: 1500px) {
   .columnn {
  
@@ -117,8 +119,8 @@
       <div class="columnn" ">
         <div class="icons">
 
-          <a href="index.html"><img src="assets/icon.webp" alt=""></a>
-          <a href="iaia.html"><img src="assets/icon.webp" alt=""></a>
+          <a href="index.html"><img src="assets/icon.gif" alt=""></a>
+          <a href="iaia.html"><img src="assets/icon.gif" alt=""></a>
 
         </div>
         <h2>DISE&Ntilde;O CONSIENTE</h2>
