--- a/disfraz.html
+++ b/disfraz.html
@@ -125,8 +125,8 @@ a {
       <div class="columnn" ">
         <div class="icons">
 
-          <a href="index.html"><img src="assets/icon.webp" alt=""></a>
-          <a href="drugstore.html"><img src="assets/icon.webp" alt=""></a>
+          <a href="index.html"><img src="assets/icon.gif" alt=""></a>
+          <a href="drugstore.html"><img src="assets/icon.gif" alt=""></a>
 
         </div>
         <h2>C&Oacute;DIGO - FUNCI&Oacute;N</h2>
