--- a/iaia.html
+++ b/iaia.html
@@ -124,8 +124,8 @@
       <div class="columnn" ">
         <div class="icons">
 
-          <a href="index.html"><img src="assets/icon.webp" alt=""></a>
-          <a href="disfraz.html"><img src="assets/icon.webp" alt=""></a>
+          <a href="index.html"><img src="assets/icon.gif" alt=""></a>
+          <a href="disfraz.html"><img src="assets/icon.gif" alt=""></a>
 
         </div>
         <h2>ZERO WASTE</h2>
