--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@ div.nom {
     transform: translate(-50%, -50%);
 }
   
-
+.nom img {
+  width: 80px;
+}
 
 * {
   box-sizing: border-box;
@@ -161,7 +163,7 @@ a {
 <div class="nom" >
 
   <a href="contacte.html"><h2>Mila Palomeras</h2></a> 
-  <a href="contacte.html"><img src="assets/icon.webp" alt=""></a>
+  <a href="contacte.html"><img src="assets/icon.gif" alt=""></a>
  
   
  </div>
