--- a/contacte.html
+++ b/contacte.html
@@ -74,7 +74,7 @@ text-align: center
 
   <div class="icons">
 
-    <a href="index.html"><img src="assets/icon.webp" alt=""></a>
+    <a href="index.html"><img src="assets/icon.gif" alt=""></a>
    
 
   </div>
