--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ text-align: center
 .responsive:hover {
   font-size: 30px;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1024px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
@@ -101,6 +101,10 @@ margin-top: 0vh;
 
   }
 
+div.nom {
+  position: absolute;
+  margin-top: 800px;
+}
   
 
 }
