--- a/contacte.html
+++ b/contacte.html
@@ -63,7 +63,7 @@ text-align: center
 <div class="responsive">
   <div class="gallery">
     <a  href="drugstore.html"> 
-      <img src="assets/mila.jpg" alt="Mila Palomeras" class="imageSpin" width="600" height="400">
+      <img src="assets/mila.jpg" alt="Mila Palomeras" class="imageSpin" width="500" height="200">
       </a>
     <div class="desc"></div>
   </div>
@@ -74,7 +74,7 @@ text-align: center
 
   <div class="icons">
 
-    <a href="index.html"><img src="assets/icon.gif" alt=""></a>
+    <a href="index.html"><img src="assets/icon.gif"  width="200" height="100" alt=""></a>
    
 
   </div>
