--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 <style>
 div.gallery {
 
-margin-top: 30vh;
+margin-top: 10vh;
+
+
 
 }
 
 
 div.gallery img {
-  width: 100%;
+  width: 150%;
   height: auto;
+
+  
 }
 
 div.desc {
@@ -65,10 +69,10 @@ text-align: center
 .responsive {
   padding: 0 6px;
   float: left;
-  width: 24.99999%;
+  width: 29%;
   font-size: 0px;
   align-content: center;
- 
+  text-align: center;
 
 }
 
@@ -79,8 +83,8 @@ text-align: center
 }
 @media only screen and (max-width: 1024px) {
   .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
+    width: 65vw;
+    margin: auto;
     
   }
 
@@ -96,14 +100,16 @@ margin-top: 0vh;
 
 @media only screen and (max-width: 500px) {
   .responsive {
-    width: 100%;
+    width: 63vw;
+    margin: auto;
+    height: autoS;
     font-size: 20px;
 
   }
 
 div.nom {
   position: absolute;
-  margin-top: 800px;
+  margin-top: 600px;
 }
   
 
@@ -133,7 +139,6 @@ a {
     <div class="desc"></div>
   </div>
 </div>
-
 
 
 <div class="responsive">
