--- a/escaner.html
+++ b/escaner.html
@@ -38,6 +38,7 @@
 <div class="text"><p>aixo es 1 escaner</p></div>
 <img src="assets/image.jpg" alt="">
 <div class="text"><p>GUAPA</p></div>
+<video controls loop><source src="assets/radio.mp4" type="video/mp4"> </video>
 
 
 <!--------------------------------------------------------->
