--- a/template.html
+++ b/template.html
@@ -24,9 +24,9 @@
 <!-- COLUMNA IMATGES I TEXT -->
 <div class="imatges">
 
-<!-- 
-  IMATGE: 
-  <img src="assets/image.jpg" alt=""> 
+<!--
+  IMATGE:
+  <img src="assets/image.jpg" alt="">
   src="aquí va la ruta de la imatge" (ALERTA AMB EL FORMAT)
 
   PARÀGRAF:
@@ -35,7 +35,7 @@
 
  -->
 <img src="assets/image.jpg" alt="">
-<div class="text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, eveniet. Quam, sequi. Consectetur, a accusantium reiciendis expedita amet recusandae inventore sequi est suscipit perspiciatis quos dolore nulla provident totam! Incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil ut, eos illum consequatur blanditiis asperiores, officiis, nemo sed in at quos esse. Nisi, quaerat accusantium. Atque nulla voluptatibus perspiciatis molestias.</p></div>
+<div class="text"><p>lorem</p></div>
 <img src="assets/image.jpg" alt="">
 <div class="text"><p>GUAPA</p></div>
 
