--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 
 -->
 
-<div class="item"><a href="template.html"><img src="assets/image.jpg" alt="">Lorem ipsum dolor sit amet </a></div>
-<div class="item"><a href="template.html"><img src="assets/image.jpg" alt="">Lorem ipsum dolor sit amet</a></div>
-<div class="item"><a href="template.html"><img src="assets/image.jpg" alt="">Lorem ipsum dolor sit amet </a></div>
-<div class="item"><a href="escaner.html"><img src="assets/image_01.jpeg" alt="">Escaner</a></div>
-<div class="item"><a href="template.html"><img src="assets/image_02.jpeg" alt="">Escaner</a></div>
+<div class="item"><a href="drugstorefolklore.html"><img src="drugstorefolklore/drug_00.jpg" alt="">Drugstore Folklore </a></div>
+<div class="item"><a href="privee.html"><img src="privee/privee_01.png" alt="">privee</a></div>
+<div class="item"><a href="iaia.html"><img src="iaia/iaia_01.png" alt="">iaia </a></div>
+<div class="item"><a href="patchwork.html"><img src="patchwork/patchwork_01.jpg" alt="">Patchwork</a></div>
+<div class="item"><a href="bosc.html"><img src="bosc/bosc_03.png" alt="">bosc</a></div>
+<div class="item"><a href="bosc2.html"><img src="bosc 2/bosc2_06.png" alt="">bosc 2</a></div>
 
 
 
